--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           industry-ready tech solutions.
         </p>
         <p>
-          I hold a Bachelor's degree in Computer Science Engineering from Dr.
+          I hold a Bachelor's degree in Computer Science Engineering from 
           rv institute of technology , where I
           graduated with an 8.53 CGPA. My academic journey has equipped me with
           a strong foundation in object-oriented programming, web development,
